### PLEASE keep in mind you WILL have to delete your /bygone/ dimension folder before updating! Some of the changes will have made things unstable in older worlds!


# New features in 1.3:
* Completely overhauled the Bygones world generation! (See below for more details!)
* Overhauled the look of the Amber Desert biome.
* Added the Amber Sand, Amber Sandstone, Cut Amber Sandstone, Smooth Amber Sandstone and Chiseled Amber Sandstone blocksets.
* Added the Primordial Beach biome.
* Added the [REDACTED] block, found in Abandoned Farms.

# Terrain Generation changes and additions:
* Added the "Primordial Beach" biome
* Added noise Pillars to the terrain
* New cave generation
* Redistributed biomes (Beaches will generate next to Oceans, Amber Deserts are less common, and  Primordial Oceans are smaller)
* Made the overall terrain more traversable by flattening it!


# Technical features:
* Added what?


# Changes to existing features:
* Chiseled Polished Bystone and Byslate are now craftable.
* Underhang water color has been adjusted.
* Underhang ambience now plays 50% less of the time.
* Copperbugs, Pests, and Trilobites are now considered "Arthopods".
* Sprinkler now bonemeals crop randomly 20% less.
* Pests now consume crops 20% more.
* Mossy Claystone now boosts Sniffer eggs hatch rates.
* Chantrelle now has a light level of six.
* Removed Umber.
* Removed Umber Bricks.


# Bugs fixed:
* Fixed crash related to Mooboos in the Bygone!
* Fixed both Polished Bystone and Polished Byslate family of blocks from not having stonecutter recipes!
* Fixed Big Beak subtitles not being translated!
* Fixed Shelfhollows biome name not being translated!

* Fixed a specific fossil generating one block in the air.
* Fixed Whirliweeds not being "replaceable".
* Fixed numerous tags from being broken.
* Fixed numerous broken stonecutter recipes for Byslate and Bystone (All types).



## **Updates in 1.2.3**
