@@ -274,26 +274,28 @@
   "entity.bygone.big_beak": "Big Beak",
   "entity.bygone.coelacanth": "Coelacanth",
   "entity.bygone.copperbug": "Copperbug",
-  "entity.bygone.duck": "THE DUCK",
+  "entity.bygone.duck": "Da Duck!",
   "entity.bygone.fungal_parent": "Fungal Being",
   "entity.bygone.glare": "Glare",
+  "entity.bygone.hydropus": "Hydropus",
   "entity.bygone.mooboo": "Mooboo",
   "entity.bygone.pest": "Pest",
   "entity.bygone.trilobite": "Trilobite",
   "entity.bygone.scuttle": "Scuttle",
   "entity.bygone.scuttle_spike": "Scuttle's Spike",
+  "entity.bygone.whiskbill": "Whiskbill",
 
   "structure.bygone.ancient_roots": "Ancient Roots",
   "structure.bygone.ruin": "Blemished Ruins",
 
   "dimension.bygone.bygone":"The Bygone",
 
+  "biome.bygone.alloy_fields":"The Alloy Fields (Not added yet)",
   "biome.bygone.amber_desert": "Amber Desert",
   "biome.bygone.underhang":"Underhang",
   "biome.bygone.shelfhollows":"The Shelf Hollows",
   "biome.bygone.primordial_beach":"Primordial Beach",
   "biome.bygone.primordial_ocean":"Primordial Ocean",
-  "biome.bygone.tar_pits":"The Cess Pools (Not added yet)",
 
   "painting.bygone.hallucigeania.title": "Hallucigeania",
   "painting.bygone.hallucigeania.author": "ZLB1",
