@@ -1,17 +1,8 @@
 {
   "replace": false,
   "values": [
-    "minecraft:pumpkin_stem",
-    "minecraft:attached_pumpkin_stem",
-    "minecraft:melon_stem",
-    "minecraft:attached_melon_stem",
-    "minecraft:beetroots",
-    "minecraft:carrots",
-    "minecraft:potatoes",
-    "minecraft:torchflower_crop",
-    "minecraft:torchflower",
-    "minecraft:pitcher_crop",
-    "minecraft:wheat",
-    "bygone:amaranth_crop"
+    "bygone:amaranth_crop",
+    "bygone:plaga_crop",
+    "bygone:chantrelle"
   ]
 }
